# nexow

./: .clippy.toml  .env.sample  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/: TESTING.md  TODO.md  architecture.md  prerequisites.md
engine/: Cargo.toml
engine/src/: data.rs  engine.rs  lib.rs  strategy.rs  types.rs
server/: Cargo.toml
server/src/: db.rs  main.rs  routes.rs  state.rs
station/: nuxt.config.ts  package.json  tailwind.config.js
station/app/: app.vue
station/pages/: assets.vue  dashboard.vue  index.vue  simulate.vue
station/stores/: engine.ts
