[package]
name = "nexow"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal"] }
which = "6"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
