[package]
name = "nexow-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "nexow_engine"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
smartcore = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
crossbeam-channel = "0.5"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
