[package]
name = "nexow-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono"] }
uuid = { version = "1", features = ["serde", "v4"] }
nexow-engine = { path = "../engine" }
anyhow = "1"
thiserror = "1"
futures = "0.3"
